# irsol-data-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md  labeler.yml
.github/workflows/: ci.yml  pre-commit.yml  pytest.yml  release.yml
docs/cli/: automations.md  cli_usage.md
docs/core/: flat_field_correction.md  slit_image_creation.md  wavelength_autocalibration.md  web_asset_compatibility.md
docs/io/: io_modules.md  output_artefacts.md
docs/maintainer/: prefect_operations.md
docs/overview/: architecture.md
docs/pipeline/: pipeline_overview.md  prefect_integration.md
docs/user/: faq.md  installation.md  quickstart.md
documentation/: architecture.md  cli-spec.md  extending.md  installation.md  ops-sirius-prefect.md  pipeline-flat-field-correction.md  pipeline-maintenance.md  pipeline-slit-image-generation.md  prefect-introduction.md  prefect-production.md  running.md
entrypoints/: bootstap_variables.py  plot_fits_profile.py  process_single_measurement.py  serve_flat_field_correction_pipeline.py  serve_pipeline.py  serve_prefect_maintenance.py  serve_slit_image_pipeline.py
report/: README.md  brightness-main.md  contrast-main.md  cron-migration-irsol-data-pipeline.md  data-flow.md  known-issues.md  pipeline-integration.md
src/irsol_data_pipeline/: __init__.py  exceptions.py  logging_config.py  version.py
tests/: conftest.py
tests/unit/: test_cli_app.py  test_cli_plot.py  test_core.py  test_day_processor.py  test_decorators.py  test_filesystem.py  test_fits_exporter.py  test_flows.py  (+9 more)
(+139 files in other folders)
