[project]
name = "irsol-data-pipeline"
version = "0.1.0"
description = "Solar observation data processing pipeline for IRSOL"
readme = "README.md"
authors = [
    { name = "Carlo Del Don", email = "deldoc@usi.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "scipy>=1.10.0",
    "spectroflat>=2.1.0",
    "qollib>=0.1.0",
    "astropy>=5.0",
    "sunpy>=5.0",
    "prefect>=3.0.0",
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "typer>=0.24.1",
    "drms>=0.7.0",
    "requests>=2.28.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.9,<0.11.0"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
